tests/error/comprehension_errors/used_twice3.err
Error: Copy violation (at $FILE:18:12)
   | 
16 | @guppy(module)
17 | def foo(qs: list[qubit] @owned) -> list[qubit]:
18 |     return [q for q in qs for x in bar(q)]
   |             ^ Variable `q` with non-copyable type `qubit` cannot be moved
   |               ...
   | 
18 |     return [q for q in qs for x in bar(q)]
   |                                        - since it was already consumed here

Guppy compilation failed due to 1 previous error
